# CB2325NumericaG2

./: .gitignore  Integracao_Numerica.py  README.md  README_realese.md  aprox_poli_min_quad.ipynb  aproximacao.py  interpolacao-polinomial.py  minimos_quadrados.ipynb  pyproject.toml  questão.ipynb  requirements.txt  setup.py  test_integral_trapezio.py  testes.py  visualizações.ipynb
.github/: CODEOWNERS
app/src/: __init__.py  interpolacao.py
app/src/aproximacao/: plots_todos.ipynb
app/src/aproximacao/ajuste_polinomial_min_quadrados/: __init__.py
app/src/aproximacao/minimos_quadrados/: __init__.py
app/src/erros-numericos/: erros-numericos.py
app/src/interpolacao/: __init__.py
app/src/raizes_de_funcoes/: secante.py  test_raizes_de_funcoes.py
sandbox/: prova.py
src/: __init__.py  interpolacao.py
src/BibliotecaNumericaG2/erros/: visualizacoes.ipynb
src/BibliotecaNumericaG2/erros_numericos/: visualizacoes_erro_absoluto.ipynb
src/CB2325NumericaG2/aproximacao/: visualizacoes.ipynb
src/CB2325NumericaG2/raizes/: visualizacoes.ipynb
src/aproximacao/: __init__.py  ajuste_polinomial_min_quadrados.py  aprox_poli_min_quad.ipynb  aproximacao.py  minimos_quadrados.ipynb  plot_linear_minimos_quadrados.py  plot_linear_theil_sen.py  plots_todos.ipynb  theil_sen.py
src/aproximacao/ajuste_polinomial_min_quadrados/: ajuste_polinomial_min_quadrados.py
src/aproximacao/minimos_quadrados/: minimos_quadrados.py
src/aproximacao/plotagem/: plot_linear_minimos_quadrados.py  plot_linear_theil_sen.py  plot_polinomio_minimos_quadrados.py
src/aproximacao/theil_sen/: __init__.py
src/erros/: visualizacoes.ipynb
src/erros-numericos/: erros-numericos.py
src/erros_numericos/: __init__.py  erro_absoluto.py  erro_relativo.py  visualizacoes.ipynb  visualizacoes_erro_absoluto.ipynb
src/integracao_numerica/: integracao_componentes.py  integracao_curva.py  integracao_retangulos.py  integracao_trapezios.py  test_integral.py  visualizações.ipynb
src/interpolacao/: __init__.py  interpolacao.py  interpolacao_hermite.py  interpolacao_polinomial.py  linear.py  linear_partes.py  vis_hermite.ipynb  vis_poli.ipynb  visualizacao_linear_partes.ipynb  visualizacoes.ipynb
src/raizes/: __init__.py  secante.py
src/raizes_de_funcoes/: __init__.py  bissecao.py  newton_raphson.py  secante.py  testes.py  vizualizações.ipynb
src/tests/: erro_numericos.julia.py  test_func.py
tests/: conftest.py  test_erro_absoluto.py  test_erro_relativo.py  test_func.py  test_integracao.py  test_interp.py  test_interphermite.py  test_interplin.py  test_interplin_partes.py  test_interppoli.py  test_linear.py  test_linear_partes.py  test_min_quadrados.py  test_poli_min_quadrados.py  test_raizes_de_funcoes.py  test_theil_sen.py
