[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CB2325NumericaG2"
version = "0.0.1"
description = "Biblioteca numérica Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Huann Vicente", email = "al.huann.silva@impatech.edu.br" },
  { name = "Gabriele Ogido", email = "al.huann.silva@impatech.edu.br" },
  { name = "Italo Rennan", email = "al.huann.silva@impatech.edu.br" },
  { name = "Gabrielle", email = "al.huann.silva@impatech.edu.br" },
  { name = "Alan dos Santos", email = "al.huann.silva@impatech.edu.br" },
  { name = "Lucas Silva", email = "al.huann.silva@impatech.edu.br" },
  { name = "Samuel Bezerra", email = "al.huann.silva@impatech.edu.br" },
  { name = "Kauã Reichert", email = "al.huann.silva@impatech.edu.br" },
  { name = "Daniela", email = "al.huann.silva@impatech.edu.br" },
  { name = "Carlos Paulo", email = "al.huann.silva@impatech.edu.br" },
  { name = "Júlia Quiuqui", email = "al.huann.silva@impatech.edu.br" }
]

dependencies = [
  "numpy",
  "sympy",
  "matplotlib",
  "plotly"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "twine>=4.0.2"]

[project.urls]
Homepage = "https://github.com/CB2325NumericaG2/CB2325NumericaG2"
Repository = "https://github.com/CB2325NumericaG2/CB2325NumericaG2.git"
Issues = "https://github.com/CB2325NumericaG2/CB2325NumericaG2/issues"

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools.package-dir]
"" = "app"